--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -7,6 +7,7 @@ parameters:
     smile.campaign.service.lists.class: Smile\EzUICampaignBundle\Service\ListsService
 
     smile.campaign.controller.campaign.class: Smile\EzUICampaignBundle\Controller\CampaignController
+    smile.campaign.controller.list.class: Smile\EzUICampaignBundle\Controller\ListController
     smile.campaign.controller.campaigns.class: Smile\EzUICampaignBundle\Controller\CampaignsController
     smile.campaign.controller.lists.class: Smile\EzUICampaignBundle\Controller\ListsController
 
@@ -50,6 +51,12 @@ services:
         arguments:
             - %smile.campaign.tabs%
             - @smile.campaign.service.campaigns
+            - @smile.campaign.service.lists
+        parent: ezpublish.controller.base
+
+    smile.campaign.controller.list:
+        class: %smile.campaign.controller.list.class%
+        arguments:
             - @smile.campaign.service.lists
         parent: ezpublish.controller.base
 
