--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -51,6 +51,7 @@ services:
         arguments:
             - %smile.campaign.tabs%
             - @smile.campaign.service.campaigns
+            - @smile.campaign.service.campaign
             - @smile.campaign.service.lists
         parent: ezpublish.controller.base
 
