--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -3,7 +3,7 @@ parameters:
     smile.campaign.service.campaign_folders.class: Smile\EzUICampaignBundle\Service\CampaignFoldersService
     smile.campaign.service.campaign_folder.class: Smile\EzUICampaignBundle\Service\CampaignFolderService
     smile.campaign.service.campaigns.class: Smile\EzUICampaignBundle\Service\CampaignsService
-    smile.campaign.service.list.class: Smile\EzUICampaignBundle\Service\ListsService
+    smile.campaign.service.list.class: Smile\EzUICampaignBundle\Service\ListService
     smile.campaign.service.lists.class: Smile\EzUICampaignBundle\Service\ListsService
 
     smile.campaign.controller.campaign.class: Smile\EzUICampaignBundle\Controller\CampaignController
@@ -58,21 +58,20 @@ services:
     smile.campaign.controller.list:
         class: %smile.campaign.controller.list.class%
         arguments:
-            - @smile.campaign.service.lists
+            - @smile.campaign.service.list
         parent: ezpublish.controller.base
 
     smile.campaign.controller.campaigns:
         class: %smile.campaign.controller.campaigns.class%
         arguments:
             - @smile.campaign.service.campaigns
-            - @smile.campaign.service.campaigns_folder
+            - @smile.campaign.service.campaign_folders
         parent: ezpublish.controller.base
 
     smile.campaign.controller.lists:
         class: %smile.campaign.controller.lists.class%
         arguments:
             - @smile.campaign.service.lists
-            - @smile.campaign.service.lists_folder
         parent: ezpublish.controller.base
 
 
