--- a/Resources/config/field_value_converters.yml
+++ b/Resources/config/field_value_converters.yml
@@ -1,9 +1,9 @@
 parameters:
-    ezpublish.fieldType.smileezuicampaign.converter.class: Smile\EzUICampaignBundle\Persistence\Content\FieldValue\Converter\CampaignConverter
+    ezpublish.fieldType.smilecampaign.converter.class: Smile\EzUICampaignBundle\Persistence\Content\FieldValue\Converter\CampaignConverter
 
 services:
-    ezpublish.fieldType.smilecampaigncampaign.converter:
-        class: "%ezpublish.fieldType.smileezuicampaign.converter.class%"
+    ezpublish.fieldType.smilecampaign.converter:
+        class: "%ezpublish.fieldType.smilecampaign.converter.class%"
         tags:
-            - {name: ezpublish.storageEngine.legacy.converter, alias: smileezuicampaign, lazy: true, callback: '::create'}
+            - {name: ezpublish.storageEngine.legacy.converter, alias: smilecampaign, lazy: true, callback: '::create'}
 
